alteração de img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <div class="caixa-img">
-            <img src="./asset/Illustration 2.png" alt="imagem de mulher com cachorro">
+            <img src="./assets/Illustration 2.png" alt="logo mulher com cachorro">
         </div>
 
         <section class="caixa-texto">
